Support to create and delete tag assign
